infrastructure/01-system/kyverno/policies/disallow-root-user.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: disallow-root-user
  annotations:
    policies.kyverno.io/title: Disallow Root User
    policies.kyverno.io/category: Pod Security Standards (Restricted)
    policies.kyverno.io/severity: medium
    pod-policies.kyverno.io/autogen-controllers: DaemonSet,Deployment,Job,StatefulSet,CronJob
spec:
  validationFailureAction: Enforce
  background: true
  rules:
    - name: check-run-as-non-root
      match:
        any:
          - resources:
              kinds:
                - Pod
      exclude:
        any:
          - resources:
              namespaces:
                - kube-system
                - cilium-system
                - argocd
                - falco
                - pdf
                - cert-manager
                - loki
                - alloy
                - mimir
                - tempo
                - crowdsec
                - metallb-system
                - karakeep
                - kube-bench

          - resources:
              selector:
                matchLabels:
                  app.kubernetes.io/part-of: falco-stack
          - resources:
              selector:
                matchLabels:
                  acme.cert-manager.io/http01-solver: "true"
          - resources:
              selector:
                matchLabels:
                  app: karakeep
      skipBackgroundRequests: true
      validate:
        allowExistingViolations: true
        message: "Running as root is not allowed. Set spec.securityContext.runAsNonRoot to true."
        pattern:
          spec:
            containers:
              - securityContext:
                  runAsNonRoot: true
